--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>test javascipt</title>
+	<title></title>
 	<meta charset="utf-8">
 </head>
-
+<style type="text/css">
+	h1{
+		position:absolute;
+		top:40%;
+		width: 100%;
+		font-family: Helvetica;
+		font-size: 100;
+		text-align: center;
+	}
+</style>
 <body>
-<h1>Hi</h1>
+	<h1>Hi</h1>
 </body>
 </html>
